fix: design sync and grid visibility visibility

--- a/PersonalWebsite/src/index.css
+++ b/PersonalWebsite/src/index.css
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-  background-color: #fffbf2f1;
+  background-color: #FFFBF2;
   background-image:
     linear-gradient(#0000000a 1px, #0000 0),
     linear-gradient(90deg, #0000000a 1px, #0000 0);
